--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="myName"
+            type="com.example.mad_practical_2.MyName" />
+    </data>
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
@@ -16,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/name"
+        android:text="@={myName.name}"
         android:textAlignment="center" />
 
     <EditText
@@ -48,6 +56,7 @@
         android:background="@color/colorAccent"
         android:paddingBottom="@dimen/small_padding"
         android:textAlignment="center"
+        android:text="@={myName.nickname}"
         android:visibility="gone" />
 
     <ImageView
@@ -71,3 +80,4 @@
             android:text="@string/bio" />
     </ScrollView>
 </LinearLayout>
+</layout>
